--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" type="text/css" href="tic_tac_toe.css">
+		<link rel="stylesheet" type="text/css" href="noughts_and_crosses.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
 	</head>
@@ -43,7 +43,7 @@
 
 		<button id="clear">Play Again!</button>
 		</div>
-		<script src="tic_tac_toe.js"></script>
+		<script src="noughts_and_crosses.js"></script>
 	</body>
 
 </html>
